# CrystalCV

./: .gitignore
backend/crystal_cv_webapp/: main.py  pyproject.toml
backend/crystal_cv_webapp/crystalcv/: app.py  auth.py  exceptions.py  settings.py  views.py
backend/crystal_cv_webapp/crystalcv/models/: base_model.py  models.py
backend/crystal_cv_webapp/crystalcv/openapi/: api.yaml
backend/crystal_cv_webapp/migrations/: env.py
backend/crystal_cv_webapp/migrations/versions/: 06b1c5c92809_.py  5c95050727aa_.py
frontend/CrystalCVApp/: buildozer.spec  client.py  crystalcv.kv  main.py  pyproject.toml
