[tool.poetry]
name = "crystalcvapp"
version = "0.1.0"
description = ""
authors = ["Peter Nociar <pnociar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.1.0"
Kivy-examples = "^2.1.0"
kivymd = "^0.104.2"
buildozer = "^1.3.0"
Cython = "^0.29.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
